--- a/src/app/student-avis/components/avis-start/avis-start.component.html
+++ b/src/app/student-avis/components/avis-start/avis-start.component.html
@@ -75,10 +75,23 @@
         <h2>Les avis les plus récents</h2>
     </div>
 
-    <div class="hero-image-top">
+    <div class="hero-image-down">
         <div class="hero-text">
-            <h1 style="font-size:20px">Des téléphones portables Neuf et d'Occasion</h1>
-            <p>en exellent état.</p>
+            <h3 style="font-size:20px">
+                Camerdiplome Avis est une plateforme collaborative qui répertorie les avis d'étudiants
+                sur leurs établissements. Elle compte à ce jour une centaine d'établissements notés,
+                et des milliers d'avis sur ces établissements. 
+            </h3>
+            <p>
+                Si tu es étudiant ou alumni, tu peux déposer un avis sur ton école, sur ton 
+                lycée ou sur ton université. Ainsi, chacun pourra détruire les préjugés sur 
+                son établissement et montrer son vrai visage. Si tu es en recherche de formation, 
+                tu peux découvrir les établissements qui t'intéressent grâce aux retours des 
+                étudiants qui les ont fréquenté. Tu peux ainsi comparer les écoles et trouver 
+                celles qui te correspondent grâce aux conseils de tes aînés. Note ton 
+                établissement et tu aideras des milliers de futurs étudiants à faire de bons 
+                choix d’orientation.
+             </p>
         </div>
     </div>
 </div>
