--- a/src/app/student-avis/components/avis-start/avis-start.component.scss
+++ b/src/app/student-avis/components/avis-start/avis-start.component.scss
@@ -12,6 +12,25 @@
         background-size: cover;
         position: relative; 
     }
+
+    .hero-image-down {
+        background-image: linear-gradient(#000000f2, #000000c9), url("../../../../assets/images/pexels-kampus-production.jpg");
+        height: 60%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative; 
+
+        .hero-text {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            position: absolute;
+            width: 90%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+        }
+    }
       
     .hero-text {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
